Fix workflow caching

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   check-in:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Clone Repo
         uses: actions/checkout@v4
@@ -15,7 +17,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.24.x"
+          go-version-file: go.mod
 
       - name: Run Program
         run: go run cmd/hoyo-daily/main.go
